wdl-engine/tests/tasks/test-join-paths/error.txt
error: call to function `read_string` failed: failed to read file `attempts/0/work/mydir/mydata.txt`: Permission denied (os error 13)
   ┌─ tests/tasks/test-join-paths/source.wdl:31:21
   │
31 │     String result = read_string(data)
   │                     ^^^^^^^^^^^

